@@ -1,5 +1,5 @@
 #ifndef lint
-static const char RCSid[] = "$Id: bsdf2klems.c,v 2.24 2017/02/17 22:31:49 greg Exp $";
+static const char RCSid[] = "$Id: bsdf2klems.c,v 2.25 2018/05/04 23:56:49 greg Exp $";
 #endif
 /*
  * Load measured BSDF interpolant and write out as XML file with Klems matrix.
@@ -602,7 +602,15 @@ main(int argc, char *argv[])
 					add_wbsdf("-f", 1);
 					add_wbsdf(argv[i], 1);
 				} else {
-					fcompile(argv[i]);
+					char	*fpath = getpath(argv[i],
+							    getrlibpath(), 0);
+					if (fpath == NULL) {
+						fprintf(stderr,
+						"%s: cannot find file '%s'\n",
+							argv[0], argv[i]);
+						return(1);
+					}
+					fcompile(fpath);
 					single_plane_incident = 0;
 				}
 			} else
